// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete, No, then Yes 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <button
      aria-label=\\"Delete this thing\\"
      class=\\"ui mini icon button icon-primary\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"trash alternate outline icon\\"
      />
    </button>
  </div>
</body>"
`;

exports[`Delete, No, then Yes 2`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div>
    <button
      aria-label=\\"Delete this thing\\"
      class=\\"ui mini icon button icon-primary\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"trash alternate outline icon\\"
      />
    </button>
  </div>
  <div
    class=\\"ui page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui small modal transition visible active\\"
      role=\\"dialog\\"
    >
      <div
        aria-label=\\"Are you sure you want to delete this message?\\"
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"trash alternate outline icon\\"
        />
        <div
          class=\\"content\\"
        >
          Are you sure you want to delete this message?
        </div>
      </div>
      <div
        class=\\"actions\\"
        style=\\"border-top: 0px;\\"
      >
        <div
          class=\\"ui large fluid buttons\\"
        >
          <button
            class=\\"ui primary button\\"
          >
            Yes
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            No
          </button>
        </div>
      </div>
    </div>
  </div>
</body>"
`;

exports[`Delete, No, then Yes 3`] = `
"<body
  class=\\"\\"
>
  <div
    aria-hidden=\\"false\\"
    id=\\"root\\"
  />
  <div>
    <button
      aria-label=\\"Delete this thing\\"
      class=\\"ui mini icon button icon-primary\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"trash alternate outline icon\\"
      />
    </button>
  </div>
</body>"
`;

exports[`Delete, No, then Yes 4`] = `
"<body
  class=\\"dimmable dimmed\\"
>
  <div
    aria-hidden=\\"true\\"
    id=\\"root\\"
  />
  <div>
    <button
      aria-label=\\"Delete this thing\\"
      class=\\"ui mini icon button icon-primary\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"trash alternate outline icon\\"
      />
    </button>
  </div>
  <div
    class=\\"ui page modals dimmer transition visible active\\"
    style=\\"display: flex;\\"
  >
    <div
      aria-modal=\\"true\\"
      class=\\"ui small modal transition visible active\\"
      role=\\"dialog\\"
    >
      <div
        aria-label=\\"Are you sure you want to delete this message?\\"
        class=\\"ui header\\"
      >
        <i
          aria-hidden=\\"true\\"
          class=\\"trash alternate outline icon\\"
        />
        <div
          class=\\"content\\"
        >
          Are you sure you want to delete this message?
        </div>
      </div>
      <div
        class=\\"actions\\"
        style=\\"border-top: 0px;\\"
      >
        <div
          class=\\"ui large fluid buttons\\"
        >
          <button
            class=\\"ui primary button\\"
          >
            Yes
          </button>
          <div
            class=\\"or\\"
          />
          <button
            class=\\"ui button\\"
          >
            No
          </button>
        </div>
      </div>
    </div>
  </div>
</body>"
`;

exports[`Delete, No, then Yes 5`] = `
"<body
  class=\\"\\"
>
  <div
    aria-hidden=\\"false\\"
    id=\\"root\\"
  />
  <div>
    <button
      aria-label=\\"Delete this thing\\"
      class=\\"ui mini icon button icon-primary\\"
    >
      <i
        aria-hidden=\\"true\\"
        class=\\"trash alternate outline icon\\"
      />
    </button>
  </div>
</body>"
`;

exports[`Render 1 1 1`] = `
<DocumentFragment>
  <button
    aria-label="Delete this thing"
    class="ui mini icon button icon-primary"
  >
    <i
      aria-hidden="true"
      class="trash alternate outline icon"
    />
  </button>
</DocumentFragment>
`;
